@@ -41,4 +41,11 @@ for k in --keep ''; do
   rm -f in.gz || fail=1
 done
 
+cp orig in || framework_failure_
+log=$(gzip -kv in 2>&1) || fail=1
+case $log in
+  *'created in.gz'*) ;;
+  *) fail=1;;
+esac
+
 Exit $fail
