@@ -20,6 +20,9 @@ GNU gzip NEWS                                    -*- outline -*-
   on some platforms when compiled with optimization.
   [bug introduced in gzip-1.3.6]
 
+  gzip -k -v no longer reports that files are replaced.
+  [bug present since the beginning]
+
   zgrep no longer malfunctions with a multi-digit context option like -15.
   Now, it passes that option to grep (equivalent to -C15) just as it does
   for single-digit options. [bug introduced in gzip-1.3.12]
